add training programs backend
Defines training programs and program instances
Persistance and access via http
